# clipwt

./: .gitignore  LICENSE  README.md  pyproject.toml
clipwt/: clipwt.py  clipwt_app.py  clipwt_constants.py  clipwt_controller.py  clipwt_model.py  clipwt_ui.py
