[tool.poetry]
name = "clipwt"
version = "0.2.0"
description = "Little tool to gather content from your clipboard"
authors = ["Nig3l <nig3lpro@gmail.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dearpygui = "^1.11.1"

[tool.poetry.scripts]
clipwt = 'clipwt.clipwt_app:launch'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
